Fixed audio not seeking on mobile before play, and styled burger menu for desktop

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ textarea,
 button,
 select,
 div,
+h4,
 a {
   outline: none;
 }
